# SavorSight

./: .gitignore  README.md
SavorSightApp/: gradle.properties  settings.gradle.kts
SavorSightApp/SavorSightApp/: build.gradle.kts
SavorSightApp/SavorSightApp/src/androidTest/java/com/savorsight/: ExampleInstrumentedTest.kt
SavorSightApp/SavorSightApp/src/main/: AndroidManifest.xml
SavorSightApp/SavorSightApp/src/main/res/values/: strings.xml  themes.xml
SavorSightApp/gradle/: libs.versions.toml
aiui-app/: AGENTS.md  app.js  app.json
aiui-app/lib/: api.js
aiui-app/pages/check-camera/: index.ink
aiui-app/pages/check-result/: index.ink
aiui-app/pages/cooking-guide/: index.ink
aiui-app/pages/recipe-draft/: index.ink
docs/: SavorSight-project-architecture.md  rokid-glasses-dev-guide.md
docs/api/: savorsight-server-api.md
docs/plans/: 2026-06-27-savorsight-development-plan.md
docs/schemas/: check-result.schema.json  learning-session.schema.json  recipe.schema.json
savorsight-glasses-ui/: colors_and_type.css  savorsight-glasses-ui.design
savorsight-glasses-ui/pages/: check-camera.html  check-result.html  cooking-guide.html  home.html  learning.html  recipe-detail.html  recipe-draft.html  recipe-list.html  scene-select-2.html  scene-select.html
server/: Cargo.toml
server/src/: app_state.rs  error.rs  main.rs
server/src/models/: check.rs  mod.rs  recipe.rs  session.rs
server/src/routes/: checks.rs  learning_sessions.rs  mock_recipe.rs  mod.rs  recipes.rs
server/src/services/: mod.rs  qwen_vl.rs  recipe_builder.rs  storage.rs
(+48 files in other folders)
